# ReactionFeasibilityModel

./: .pre-commit-config.yaml  README.md  environment_full.yml  pyproject.toml  requirements.txt
configs/: rfm_train.gin  rfm_train_test.gin
configs/datasets/: forward_with_shuffle.gin  sanity_check.gin
configs/loggers/: wandb.gin
configs/models/: egnn_like.gin  gat.gin  gine.gin  mpnn_slow.gin  shared.gin
data/uspto_50k/processed/forward_with_shuffle/: test.csv  valid.csv
data/uspto_50k/processed/sanity_check/: valid_10.csv
featurizers/: featurizer.py  utils.py
models/: __init__.py  gnns.py  reaction_gnn.py
notebooks/: example.ipynb
notebooks/create_dataset/: create_negative_forward.ipynb  create_negative_shuffle.ipynb  create_positive.ipynb  extract_forward_templates.ipynb  merge_files.ipynb  utils.py
rfm/: train.py
rfm/configs/: rfm_train.gin
rfm/configs/datasets/: forward_with_shuffle.gin
rfm/configs/loggers/: wandb.gin
rfm/configs/metrics/: essential.gin
rfm/configs/models/: mpnn.gin
rfm/data/forward_with_shuffle/: valid.csv
rfm/featurizers/: __init__.py  featurizer.py
rfm/gin_config/: __init__.py  external_configurables.py  utils.py
rfm/models/: gnns.py  reaction_gnn.py  utils.py
rfm/trainer/: __init__.py  lightning_module.py  metrics.py  optimizer_base.py  reaction_dataset.py  trainer.py  utils.py
rfm/trainer/logger/: dummy_logger.py  logger_base.py  wandb_logger.py
